welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:31: error: not found: value COlor
  faitPousserFleur(COlor.pink)
                   ^