welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def faitPousserFleur(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  avance(2)
  recule()
  gauche()
  avance()
  recule(2)
  leveBrosse()
  avance()
  setCouleurBrosse(Color.yellow)
  baisseBrosse()
  leveBrosse()
  gauche()
  
}

def growFlowers(){
  faitPousserFleur(Color.red)
  avance(3)
  faitPousserFleur(Color.cyan)
  recule(5)
  droite()
  avance(2)
  gauche()
  avance(2)
  faitPousserFleur(Color.orange)
  recule(3)
  droite()
  avance(2)
  faitPousserFleur(COlor.pink)
  avance(3)
  faitPousserFleur(Color.green)
  recule(5)  
}